<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:showAsAction="always">

    <!-- opcion para refrescar los datos -->
    <item
        android:id="@+id/itemActualizar"
        android:title="@string/menuActualizar" />

    <!-- opcion para mostrar informacion -->
    <item
        android:id="@+id/itemInfo"
        android:title="@string/menuInfo" />

    <item
        android:id="@+id/button_test_filtroTipoGasolina"
        android:title="@string/filtrar_tipoGasolina"
        />

    <!-- opcion auxiliar filtro por marca -->
    <item
        android:id="@+id/button_test_filtroMarca"
        android:title="@string/filtrar_marcaGasolinera"
        />

    <!-- opcion para anhadir una tarjeta (para los test de interfaz) -->
    <item
        android:id="@+id/button_test_anhadeTarjetaDescuento"
        android:title="@string/slider_menu_text_nueva_tarjeta_descuento" />
    <item
        android:id="@+id/button_test_filtroPrecioMaximo"
        android:title="@string/filtrar_precioMaximo" />
</menu>